Teste de squash 1

--- a/app/views/layouts/_create_complaint_form.html.erb
+++ b/app/views/layouts/_create_complaint_form.html.erb
@@ -23,7 +23,7 @@
       <div class="select">
       <%= f.select(:noise_type, options_for_select(
             [ 
-              ["Residência", 1],
+              ["Residênciaaaa", 1],
               ["Comércio", 2],
               ["Indústria", 3],
               ["Templo religioso", 4],
