Teste de squash 2

--- a/app/views/layouts/_create_complaint_form.html.erb
+++ b/app/views/layouts/_create_complaint_form.html.erb
@@ -26,7 +26,7 @@
               ["Residênciaaaa", 1],
               ["Comércio", 2],
               ["Indústria", 3],
-              ["Templo religioso", 4],
+              ["Templo religiosooo", 4],
               ["Transporte", 5],
               ["Construção civil", 6],
               ["Outros", 7]
