--- a/app/views/layouts/_create_complaint_form.html.erb
+++ b/app/views/layouts/_create_complaint_form.html.erb
@@ -26,10 +26,10 @@
               ["Residênciaaaa", 1],
               ["Comércio", 2],
               ["Indústria", 3],
-              ["Templo religiosooo", 4],
+              ["Templo religiosooooo", 4],
               ["Transporte", 5],
               ["Construção civil", 6],
-              ["Outros", 7]
+              ["Outrooos", 7]
           ]), required: true ) %>
       </div>
     </div>
